--- a/index.html
+++ b/index.html
@@ -2224,7 +2224,7 @@ restartButton.addEventListener("click", () => {
   },
   {
     title: "",
-    imageUrl: "_THE_NEW_AFRICA 2.png", // Replace with your drawing's URL
+    imageUrl: "https://raw.githubusercontent.com/Lesliekonlack/images/refs/heads/main/_THE_NEW_AFRICA%202.heic", 
     description: "",
     page: 5,
   },
