--- a/index.html
+++ b/index.html
@@ -1922,12 +1922,18 @@ video {
             Built a deep learning model using TensorFlow and Python to predict customer churn in the 
             telecom industry. The project includes a Streamlit-based web application for real-time predictions.
           </p>
-          <a href="https://github.com/naomikonlack/33832025_Churning_Customers" target="_blank">
-            View Project on GitHub
-          </a>
+          <div class="project-links">
+            <a href="https://github.com/naomikonlack/33832025_Churning_Customers" target="_blank">
+              View Project on GitHub
+            </a>
+            <span> | </span>
+            <a href=" https://www.youtube.com/watch?v=VDxhrH-HX-g" target="_blank">
+              Watch Demo on YouTube
+            </a>
+          </div>  
         </div>
 
-
+ 
        <!-- Project 2 -->
         <div class="project-card">
           <h3>Music Recommendation System</h3>
@@ -1936,7 +1942,7 @@ video {
             to suggest suitable tracks. Awarded Best Project in an Artificial Intelligence course.
           </p>
           <div class="project-links">
-            <a href="https://github.com/naomikonlack/Music-Facial-Recognition" target="_blank">
+            <a href="https://github.com/BlessingLeslie/Group20MusicRecommendation" target="_blank">
               View Project on GitHub
             </a>
             <span> | </span>
@@ -1946,7 +1952,6 @@ video {
           </div>
         </div>
 
-
         <!-- Project 3 -->
         <div class="project-card">
           <h3>Player Ratings Predictor</h3>
@@ -1954,12 +1959,13 @@ video {
             Designed a Streamlit-based app utilizing a RandomForestRegressor model to predict football 
             player ratings based on historical data and game performance.
           </p>
-          <a href="https://github.com/naomikonlack" target="_blank">
+          <a href="https://github.com/naomikonlack/group20aiproject_playerratingspredictor5" target="_blank">
             View Project on GitHub
           </a>
         </div>
         <br>
         <span>
+          
           <div class="awards-header1">
             <h2>AWARDS</h2>
           </div>
