--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,7 @@ video {
           <h3>Telecom Customer Churn Prediction</h3>
           <p>
             Built a deep learning model using TensorFlow and Python to predict customer churn in the 
-            telecom industry. The project includes a Streamlit-based web application for real-time predictions.
+            telecom industry. The project included a Streamlit-based web application for real-time predictions.
           </p>
           <div class="project-links">
             <a href="https://github.com/naomikonlack/33832025_Churning_Customers" target="_blank">
