--- a/index.html
+++ b/index.html
@@ -1959,11 +1959,19 @@ video {
             Designed a Streamlit-based app utilizing a RandomForestRegressor model to predict football 
             player ratings based on historical data and game performance.
           </p>
-          <a href="https://github.com/naomikonlack/group20aiproject_playerratingspredictor5" target="_blank">
-            View Project on GitHub
-          </a>
+          <div class="project-links">
+            <a href="https://github.com/Lesliekonlack/AIGROUP20_SPORTPREDICTIONAPP?tab=readme-ov-file" target="_blank">
+              View Project on GitHub
+            </a>
+            <span> | </span>
+            <a href="
+            https://www.youtube.com/watch?v=3uZBf6Fch_s" target="_blank">
+              Watch Demo on YouTube
+            </a>
+          </div>
         </div>
         <br>
+
         <span>
           
           <div class="awards-header1">
