--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@ video {
   <nav class="navbar">
     <ul>
       <li><a href="#hero">Home</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="#about">ArtBook</a></li>
       <li><a href="#videography">Videography</a></li>
       <li><a href="#leslie-in-tech">In-tech</a></li>
       <li><a href="#contact">Contact & Skills</a></li>
@@ -1622,7 +1622,7 @@ video {
     <hr class="sidebar-divider">
     <ul class="sidebar-links">
       <li><a href="#hero" class="sidebar-link" id="link-home"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#about" class="sidebar-link" id="link-about"><i class="fas fa-user"></i> StoryBook</a></li>
+      <li><a href="#about" class="sidebar-link" id="link-about"><i class="fas fa-user"></i> ArtBook </a></li>
       <li><a href="#videography" class="sidebar-link" id="link-videography"><i class="fas fa-tools"></i> Videography </a></li>
       <li><a href="#leslie-in-tech" class="sidebar-link" id="link-leslie-in-tech"><i class="fas fa-briefcase"></i> In-tech </a></li>
       <li><a href="#contact" class="sidebar-link" id="link-contact"><i class="fas fa-envelope"></i> Contact & Skills</a></li>
