--- a/index.html
+++ b/index.html
@@ -1642,7 +1642,7 @@ video {
           <span class="tooltip">Who Is She ???</span>
           <i class="bi bi-question-circle-fill"></i> <!-- Bootstrap question icon -->
         </div>
-        <img src="WhoIsLeslie.webp" 
+        <img src="https://raw.githubusercontent.com/Lesliekonlack/LeslieKonlackPortfolio/refs/heads/main/WhoIsLeslie.webp" 
              alt="Who is Leslie" 
              class="who-is-leslie">
       </div>
@@ -1696,7 +1696,7 @@ video {
           <div class="front cover-page">
               <div class="cover-content">
                   <h1 class="title">The Creative Chronicles</h1>
-                  <img src="LeslieInDigitalArt.webp" 
+                  <img src="https://raw.githubusercontent.com/Lesliekonlack/LeslieKonlackPortfolio/refs/heads/main/LeslieInDigitalArt.webp" 
                        alt="Drawings of Leslie Konlack" class="cover-image" />
                   <p style = "color: white;" class="introduction">By Leslie Konlack.</p>
               </div>
