--- a/index.html
+++ b/index.html
@@ -1580,6 +1580,182 @@ video {
 }
 
 
+/* Universal Flexibility */
+html {
+  font-size: 16px;
+}
+
+body {
+  font-size: 1rem; /* Base font size for desktop */
+}
+
+/* General Image and Layout Adaptability */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Responsive Media Queries */
+@media (max-width: 1280px) {
+  .sidebar {
+    width: 220px; /* Reduce sidebar width for larger tablets */
+    font-size: 0.9rem;
+  }
+
+  .hero {
+    padding: 4rem;
+  }
+
+  .navbar ul {
+    gap: 1.5rem; /* Reduce gap between items */
+  }
+
+  .skills-container {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+}
+
+@media (max-width: 1024px) {
+  .sidebar {
+    display: none; /* Hide sidebar for tablets */
+  }
+
+  .navbar {
+    display: flex;
+  }
+
+  .hero {
+    flex-direction: column; /* Stack content vertically */
+    padding: 3rem 1rem;
+  }
+
+  .hero-image img {
+    width: 80%; /* Center-align and reduce image size */
+    margin: 0 auto;
+  }
+
+  .hero-text {
+    text-align: center; /* Center-align text */
+  }
+
+  .skills-container {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 1rem;
+  }
+
+  .video-gallery {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar ul {
+    flex-direction: column; /* Stack navigation items */
+    gap: 1rem;
+  }
+
+  .navbar ul li a {
+    font-size: 1rem; /* Reduce font size */
+  }
+
+  .hero {
+    padding: 2rem 1rem;
+  }
+
+  .skills-container {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Smaller grid */
+  }
+
+  .video-gallery {
+    grid-template-columns: 1fr; /* Single column for videos */
+  }
+
+  .profile-pic {
+    width: 180px; /* Adjust profile picture size */
+    height: 180px;
+  }
+
+  .book {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    padding: 1rem; /* Reduce navbar padding */
+  }
+
+  .navbar ul {
+    gap: 0.5rem;
+  }
+
+  .navbar ul li a {
+    font-size: 0.9rem;
+  }
+
+  .hero {
+    padding: 1rem;
+  }
+
+  .hero-image img {
+    width: 100%; /* Scale hero image */
+  }
+
+  .skills-container {
+    grid-template-columns: 1fr; /* Single column for skills */
+  }
+
+  .video-gallery {
+    grid-template-columns: 1fr; /* Single column for videos */
+    gap: 0.5rem;
+  }
+
+  .profile-pic {
+    width: 150px; /* Further reduce profile picture size */
+    height: 150px;
+  }
+
+  .cta-buttons a {
+    font-size: 0.8rem;
+    padding: 0.8rem 1.5rem; /* Adjust button size */
+  }
+
+  .book {
+    padding: 1rem;
+  }
+}
+
+/* Ultra Small Screens */
+@media (max-width: 360px) {
+  .navbar ul li a {
+    font-size: 0.8rem;
+  }
+
+  .hero {
+    padding: 0.5rem;
+  }
+
+  .skills-container {
+    grid-template-columns: 1fr; /* Force single column */
+  }
+
+  .cta-buttons a {
+    font-size: 0.7rem;
+    padding: 0.6rem 1rem;
+  }
+
+  .profile-pic {
+    width: 120px; /* Smallest profile picture size */
+    height: 120px;
+  }
+
+  .book {
+    width: 90%; /* Shrink book width */
+  }
+}
+
+
   </style>
 </head>
 <body>
